@@ -24,6 +24,10 @@ version 0.7.2 - Currently available as svn snapshot
 		'label' instead.
   - BUG: fix a memory leak bug in stator
   - BUG: fix starting allele problem in simuCDCV.py
+  - CHG: change the allele type of long module to unsigned short, since
+		2^16 seems to be enough even for long allele cases.
+  - NEW: add -c option to simuCluster.py to allow it to se command instead
+		of the default qaub
 
 
 version 0.7.1 - (Rev 378) - Aug 20, 2006
